Added Documentation for Digital Ocean setup